style/style.css
:root {
  --main-font: sans-serif;
  --text-size: 15px;

  --bg-page: #BF897F;
  --bg-main: #DAC2B2;
  --bg-input: #DAC2B2;

  --accent-brown: #595046;
  --text-white: #DAC2B2;
}

body {
  background-color: var(--bg-page);
  font-family: var(--main-font);
  font-size: var(--text-size);
}  

.main {
  display: flex;
  gap: 20px;
  flex-direction: column;
  max-width: 500px;
  min-height: 90vh;
  margin: 50px auto;
  padding-top: 20px;
  padding-bottom: 20px;
  background: var(--bg-main);
}

.h1 {
  text-align: center;
  color: var(--text-white);
  font-size: 45px;
  font-family: var(--main-font);
}

.wrapper {
  display: flex;
  justify-content: center;
}

input {
  height: 25px;
  width: 300px;
  padding-left: 5px;
  font-size: var(--text-size);
  font-family: var(--main-font);
  color: var(--bg-main);
  background-color: var(--bg-input);
}

input::placeholder {
  font-size: var(--text-size);
  font-family: var(--main-font);
}

.addBtn {
  padding: 5px;
  font-size: 15px;
  font-family: var(--main-font);
  color: var(--text-white);
  background-color: var(--accent-brown);
}

ul {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding-left: 50px;
}

li {
  display: flex;
  flex-direction: row;
  gap: 5px;
  max-width: 400px;
  white-space: normal;
  font-size: var(--text-size);
  font-family: var(--main-font);
  align-items: start;
  color: var(--accent-brown);
}

.span {
  flex: 1;
  min-width: 0;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.done {
  text-decoration: line-through;
  opacity: 0.5;
}

.remove-btn {
  padding-left: 3px;
  padding-right: 3px;
  font-family: var(--main-font);
  color: var(--text-white);
  background-color: var(--accent-brown);
}

.done-btn {
  padding-left: 3px;
  padding-right: 3px;
  font-family: var(--main-font);
  color: var(--text-white);
  background-color: var(--accent-brown);
}

